[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend"
authors = ["MisileLaboratory", "ny64"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.23.1"
fastapi = "0.100.0"
orjson = "3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
